--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.4.3"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
